--- a/views/index.ejs
+++ b/views/index.ejs
@@ -120,38 +120,43 @@
     <div class="row row-cols-1 row-cols-md-3 g-4">
       <div class="col">
         <div class="card h-100">
+          <a href="/post/8" class="list-group  list-group-item-action" style="text-decoration: none;">
           <img src="Img/Elden-News.jpg" class="card-img-top">
           <div class="card-body">
             <h5 class="card-title">Game of the year 2023</h5>
             <p class="card-text">'Elden Ring' Takes the Crown!</p>
           </div>
+          </a>
         </div>
       </div>
       <div class="col">
         <div class="card h-100">
-          <img src="Img/Disrespect-News.jpg" class="card-img-top" alt="...">
+          <a href="/post/7" class="list-group  list-group-item-action" style="text-decoration: none;">
+          <img src="Img/Disrespect-News.jpg" class="card-img-top">
           <div class="card-body">
             <h5 class="card-title">Dr.Disrespect controversy</h5>
             <p class="card-text">How a streamer distroyed his carrier</p>
           </div>
+          </a>
         </div>
       </div>
       <div class="col">
         <div class="card h-100">
+          <a href="/post/9" class="list-group  list-group-item-action" style="text-decoration: none;">
           <img src="Img/genshin-news.webp" class="card-img-top" alt="...">
           <div class="card-body">
             <h5 class="card-title">Genshin Impact: Natlan Trailer</h5>
             <p class="card-text"> A Glimpse into the Land of Pyro</p>
           </div>
+        </a>
         </div>
       </div>
     </div>
-    </div
+  </div>
 
 
 
 
-    <!-- Discussion Forum Preview -->
     <section class="container mt-5">
     <div class="home-section">
       <div class="trending-posts">
