--- a/views/index.ejs
+++ b/views/index.ejs
@@ -101,15 +101,15 @@
     <section class="container mt-5">
         <h2>Featured Games</h2>
         <div class="slider">
-        <div class="slider-img"><img src="/Img/Elden Ring.jpg" alt="Game 1" class="img-fluid"></div>
-        <div class="slider-img"><img src="/Img/Sekiro.jpg" alt="Game 2" class="img-fluid"></div>
-        <div class="slider-img"><img src="/Img/Pokemon_Run_and_Bun_1920x1080.webp" alt="Game 3" class="img-fluid"></div>
-        <div class="slider-img"><img src="/Img/dark-souls-remastered-review.jpg" alt="Game 4" class="img-fluid"></div>
-        <div class="slider-img"><img src="/Img/Persona_5_1920x1080.webp" alt="Game 5" class="img-fluid"></div>
-        <div class="slider-img"><img src="Img/uncharted.jpg" alt="Game 6" class="img-fluid"></div>
-        <div class="slider-img"><img src="Img/borderlands.jpg" alt="Game 7" class="img-fluid"></div>
-        <div class="slider-img"><img src="Img/bayonetta.jpg" alt="Game 7" class="img-fluid"></div>
-        <div class="slider-img"><img src="Img/resident_evil.jpg" alt="Game 7" class="img-fluid"></div>
+        <div class="slider-img"><a href="https://store.steampowered.com/app/1245620/ELDEN_RING/" target="_blank"><img src="/Img/Elden Ring.jpg" alt="Game 1" class="img-fluid"></a></div>
+        <div class="slider-img"><a href="https://store.steampowered.com/app/814380/Sekiro_Shadows_Die_Twice__GOTY_Edition/" target="_blank"><img src="/Img/Sekiro.jpg" alt="Game 2" class="img-fluid"></a></div>
+        <div class="slider-img"><a href="https://www.pokecommunity.com/threads/pok%C3%A9mon-run-bun-v1-07.493223/" target="_blank"><img src="/Img/Pokemon_Run_and_Bun_1920x1080.webp" alt="Game 3" class="img-fluid"></a></div>
+        <div class="slider-img"><a href="https://store.steampowered.com/app/374320/DARK_SOULS_III/" target="_blank"><img src="/Img/dark-souls-remastered-review.jpg" alt="Game 4" class="img-fluid"></a></div>
+        <div class="slider-img"><a href="https://store.steampowered.com/app/1687950/Persona_5_Royal/" target="_blank"><img src="/Img/Persona_5_1920x1080.webp" alt="Game 5" class="img-fluid"></a></div>
+        <div class="slider-img"><a href="https://store.steampowered.com/app/1659420/UNCHARTED_Legacy_of_Thieves_Collection/" target="_blank"><img src="Img/uncharted.jpg" alt="Game 6" class="img-fluid"></a></div>
+        <div class="slider-img"><a href="https://store.steampowered.com/app/397540/Borderlands_3/" target="_blank"><img src="Img/borderlands.jpg" alt="Game 7" class="img-fluid"></a></div>
+        <div class="slider-img"><a href="https://www.platinumgames.com/games/bayonetta-2?age-verified=f8dda3cbba" target="_blank"><img src="Img/bayonetta.jpg" alt="Game 7" class="img-fluid"></a></div>
+        <div class="slider-img"><a href="https://store.steampowered.com/app/418370/Resident_Evil_7_Biohazard/" target="_blank"><img src="Img/resident_evil.jpg" alt="Game 7" class="img-fluid"></a></div>
         </div>
     </section>
 
@@ -155,7 +155,7 @@
   </div>
 
 
-
+<!--Trending Posts-->
 
     <section class="container mt-5">
     <div class="home-section">
@@ -181,6 +181,7 @@
         <a href="/forum" class="btn btn-primary Visit">Visit Forum</a>
       </div>
       </div>
+<!--Top Contributors-->      
       <div class="top-contributions">
         <div style="padding-left: 10px;">
         <div style="border: solid 1px rgb(228, 228, 228); display: flex; justify-content: center;" >
@@ -208,6 +209,8 @@
       </div>
     </div>
     </section>
+
+ <!--Footer-->   
     <div style="padding-top: 20px;">
     <footer class=" bg-dark  text-center text-white footer">
       <div class="container p-4 pb-0" >
