--- a/views/trending.ejs
+++ b/views/trending.ejs
@@ -92,7 +92,8 @@
         </div>
       </nav>
     </div>
-    <div class="container-fluid mt-5">
+    <div class="container mt-5">
+      <h3>Trending Posts</h3>
         <div class="list-group">
             <% posts.forEach(function(post) { %>
               <a href="/post/<%= post.postid %>" class="list-group-item list-group-item-action forum-heading">
