--- a/views/forum.ejs
+++ b/views/forum.ejs
@@ -80,7 +80,7 @@
                 </li>
               <% } %>
             </ul>
-            <form class="d-flex" role="search">
+            <form class="d-flex" role="search" method="POST" action="/search">
               <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
               <button class="btn btn-outline-success" type="submit">Search</button>
             </form>
