--- a/views/postDetail.ejs
+++ b/views/postDetail.ejs
@@ -82,7 +82,7 @@
                 </li>
               <% } %>
             </ul>
-            <form class="d-flex" role="search">
+            <form class="d-flex" role="search" method="POST" action="/search">
               <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
               <button class="btn btn-outline-success" type="submit">Search</button>
             </form>
@@ -143,7 +143,7 @@
           <li>
               <div class="row">
                 <div class="col-md-12 post-box">
-                      <div class="user-icon" style="display: flex; flex-direction: column; justify-items: center; align-items: center;">
+                      <div class="user-icon-comment" style="display: flex; flex-direction: column; justify-items: center; align-items: center;">
                       <div class="profile-icon">
                       <i class="fas fa-user-circle fa-2x"></i>
                       </div>
